Added overview, motivation and data sources

--- a/project_1.ipynb
+++ b/project_1.ipynb
@@ -11,17 +11,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Project Title: [to_be_decided]"
+    "# Project Title — *World of Board Games: Which Ones Are Popular and Why?*"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Team Members:\n",
-    "- Keqing Lu\n",
-    "- Xiyuan Wang\n",
-    "- Fangqing Yuan"
+    "## Team Members\n",
+    "- Keqing Lu (keqinglu)\n",
+    "- Xiyuan Wang (denniswx)\n",
+    "- Fangqing Yuan (fangqing)"
    ]
   },
   {
@@ -34,7 +34,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "By analyzing the data of more than 20,000 board games, we aim to evaluate what factors make them popular and highly rated, and try making some predictions based on our analysis results."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -46,7 +48,12 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Board games have a long history, and are still evolving and immensely popular with modern players. Many players have rated board games on online forums, which emables us to analyze what makes a board game successful. Specifically, through the analysis of our datasets, we aim to explore the following questions:\n",
+    "- What factors, like playing time and minimum age, affect the popularity of board games?\n",
+    "- What factors, like category and theme, affect the rating of board games?\n",
+    "- Are popular board games more highly rated, and vise versa?"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -58,7 +65,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "We find our data from https://www.kaggle.com/datasets/joebeachcapital/board-games. The two datasets, `ratings.csv` and `details.csv`, are acquired from https://www.boardgamegeek.com/. `ratings.csv` contains the rating information of the board games, and `details.csv` contains the detailed information, such as publish year, player info, and design info of the board games. By combining these two datasets, we will be able to study the relationship between the various factors of the board games and their rating/popularity."
+   ]
   },
   {
    "cell_type": "markdown",
