update firts part

--- a/project_1.ipynb
+++ b/project_1.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Project Title — *World of Board Games: Which Ones Are Popular and Why?*"
+    "# Project Title — *World of Board Games: What make them popular and highly-rated?*"
    ]
   },
   {
@@ -35,7 +35,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "By analyzing the data of more than 20,000 board games, we aim to evaluate what factors make them popular and highly rated, and try making some predictions based on our analysis results."
+    "By analyzing the data of more than 20,000 board games, we aim to analyze these games, evaluate what characteristics make them popular and highly rated, and fit models for popularity and rating base on statistical and machine learning techniques."
    ]
   },
   {
@@ -49,8 +49,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Board games have a long history, and are still evolving and immensely popular with modern players. Many players have rated board games on online forums, which emables us to analyze what makes a board game successful. Specifically, through the analysis of our datasets, we aim to explore the following questions:\n",
-    "- What factors, like playing time and minimum age, affect the popularity of board games?\n",
+    "Board games have a long history, and are still evolving and immensely popular among modern players [**<font color = red>1</font>**](#reference). Many players have rated board games on online platforms, which give us access to measure how popular and appreciated by the players. Our motivation stems from the desire to delve deeper into the factors that contribute to the success and popularity of board games. By analyzing data from over 20,000 board games, we aim to unlock insights into what makes certain games stand out among the rest. Specifically, we aim to explore the following questions:\n",
+    "- What characteristics a board game has?\n",
+    "- What are the measurements for a board game's popularity and how well it is appreciated by its players?\n",
+    "- What factors, like playing time, minimum age, and number of players, affect the popularity of board games?\n",
     "- What factors, like category and theme, affect the rating of board games?\n",
     "- Are popular board games more highly rated, and vise versa?"
    ]
@@ -66,7 +68,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We find our data from https://www.kaggle.com/datasets/joebeachcapital/board-games. The two datasets, `ratings.csv` and `details.csv`, are acquired from https://www.boardgamegeek.com/. `ratings.csv` contains the rating information of the board games, and `details.csv` contains the detailed information, such as publish year, player info, and design info of the board games. By combining these two datasets, we will be able to study the relationship between the various factors of the board games and their rating/popularity."
+    "The data files we use come from [kaggle](https://www.kaggle.com/datasets/joebeachcapital/board-games) [**<font color = red>2</font>**](#reference). The two datasets, `ratings.csv` and `details.csv`, according to kaggle page description, are acquired from [boardgamegeek.com](https://www.boardgamegeek.com/), which is an online forum for board gaming hobbyists and a game database that holds reviews, images and videos for over 125,600 different tabletop games, including European-style board games, wargames, and card games [**<font color = red>3</font>**](#reference).\n",
+    "\n",
+    "`ratings.csv` contains the ratings information of each board game, and `details.csv` contains the detailed information, such as publish year, player info, and design info of the board games. By combining these two datasets, we will be able to study the relationship between the various factors of the board games and their ratings and popularity."
    ]
   },
   {
@@ -79,7 +83,203 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Based on the description on kaggle, the two datasets have following information:\n",
+    "\n",
+    "`ratings.csv`:\n",
+    "\n",
+    "<table>\n",
+    "<thead>\n",
+    "<tr>\n",
+    "<th>variable</th>\n",
+    "<th>class</th>\n",
+    "<th>description</th>\n",
+    "</tr>\n",
+    "</thead>\n",
+    "<tbody>\n",
+    "<tr>\n",
+    "<td>num</td>\n",
+    "<td>double</td>\n",
+    "<td>Game number</td>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "<td>id</td>\n",
+    "<td>double</td>\n",
+    "<td>Game ID</td>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "<td>name</td>\n",
+    "<td>character</td>\n",
+    "<td>Game name</td>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "<td>year</td>\n",
+    "<td>double</td>\n",
+    "<td>Game year</td>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "<td>rank</td>\n",
+    "<td>double</td>\n",
+    "<td>Game rank</td>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "<td>average</td>\n",
+    "<td>double</td>\n",
+    "<td>Average rating</td>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "<td>bayes_average</td>\n",
+    "<td>double</td>\n",
+    "<td>Bayes average rating</td>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "<td>users_rated</td>\n",
+    "<td>double</td>\n",
+    "<td>Users rated</td>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "<td>url</td>\n",
+    "<td>character</td>\n",
+    "<td>Game url</td>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "<td>thumbnail</td>\n",
+    "<td>character</td>\n",
+    "<td>Game thumbnail</td>\n",
+    "</tr>\n",
+    "</tbody>\n",
+    "</table>\n",
+    "\n",
+    "\n",
+    "`details.csv`:\n",
+    "\n",
+    "<table>\n",
+    "<thead>\n",
+    "<tr>\n",
+    "<th>variable</th>\n",
+    "<th>class</th>\n",
+    "<th>description</th>\n",
+    "</tr>\n",
+    "</thead>\n",
+    "<tbody>\n",
+    "<tr>\n",
+    "<td>num</td>\n",
+    "<td>double</td>\n",
+    "<td>Game number</td>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "<td>id</td>\n",
+    "<td>double</td>\n",
+    "<td>Game ID</td>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "<td>primary</td>\n",
+    "<td>character</td>\n",
+    "<td>Primary name</td>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "<td>description</td>\n",
+    "<td>character</td>\n",
+    "<td>Description of game</td>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "<td>yearpublished</td>\n",
+    "<td>double</td>\n",
+    "<td>Year published</td>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "<td>minplayers</td>\n",
+    "<td>double</td>\n",
+    "<td>Min n of players</td>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "<td>maxplayers</td>\n",
+    "<td>double</td>\n",
+    "<td>Max n of players</td>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "<td>playingtime</td>\n",
+    "<td>double</td>\n",
+    "<td>Playing time in minutes</td>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "<td>minplaytime</td>\n",
+    "<td>double</td>\n",
+    "<td>Min play time</td>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "<td>maxplaytime</td>\n",
+    "<td>double</td>\n",
+    "<td>Max plat tome</td>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "<td>minage</td>\n",
+    "<td>double</td>\n",
+    "<td>minimum age</td>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "<td>boardgamecategory</td>\n",
+    "<td>character</td>\n",
+    "<td>Category</td>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "<td>boardgamemechanic</td>\n",
+    "<td>character</td>\n",
+    "<td>Mechanic</td>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "<td>boardgamefamily</td>\n",
+    "<td>character</td>\n",
+    "<td>Board game family</td>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "<td>boardgameexpansion</td>\n",
+    "<td>character</td>\n",
+    "<td>Expansion</td>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "<td>boardgameimplementation</td>\n",
+    "<td>character</td>\n",
+    "<td>Implementation</td>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "<td>boardgamedesigner</td>\n",
+    "<td>character</td>\n",
+    "<td>Designer</td>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "<td>boardgameartist</td>\n",
+    "<td>character</td>\n",
+    "<td>Artist</td>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "<td>boardgamepublisher</td>\n",
+    "<td>character</td>\n",
+    "<td>Publisher</td>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "<td>owned</td>\n",
+    "<td>double</td>\n",
+    "<td>Num owned</td>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "<td>trading</td>\n",
+    "<td>double</td>\n",
+    "<td>Num trading</td>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "<td>wanting</td>\n",
+    "<td>double</td>\n",
+    "<td>Num wanting</td>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "<td>wishing</td>\n",
+    "<td>double</td>\n",
+    "<td>Num wishing</td>\n",
+    "</tr>\n",
+    "</tbody>\n",
+    "</table>"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -87,11 +287,6 @@
    "source": [
     "## Data Manipulation"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "code",
@@ -615,6 +810,19 @@
    "metadata": {},
    "source": [
     "## Data Visualization"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='reference'>\n",
+    "<strong>Reference</strong>\n",
+    "</a>\n",
+    "\n",
+    "- [1] https://gitnux.org/board-game-popularity-statistics/\n",
+    "- [2] https://www.kaggle.com/datasets/joebeachcapital/board-games/data\n",
+    "- [3] https://en.wikipedia.org/wiki/BoardGameGeek"
    ]
   }
  ],
