--- a/project_1.ipynb
+++ b/project_1.ipynb
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +317,8 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "from matplotlib_venn import venn2"
    ]
   },
   {
@@ -806,6 +807,125 @@
    "source": [
     "# check data types and existence of null values\n",
     "full_data.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "thumbnail                      6\n",
+       "num_y                        200\n",
+       "primary                      200\n",
+       "description                  201\n",
+       "yearpublished                200\n",
+       "minplayers                   200\n",
+       "maxplayers                   200\n",
+       "playingtime                  200\n",
+       "minplaytime                  200\n",
+       "maxplaytime                  200\n",
+       "minage                       200\n",
+       "boardgamecategory            483\n",
+       "boardgamemechanic           1790\n",
+       "boardgamefamily             3961\n",
+       "boardgameexpansion         16325\n",
+       "boardgameimplementation    16969\n",
+       "boardgamedesigner            796\n",
+       "boardgameartist             6107\n",
+       "boardgamepublisher           201\n",
+       "owned                        200\n",
+       "trading                      200\n",
+       "wanting                      200\n",
+       "wishing                      200\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "full_data.isnull().sum()[full_data.isnull().any()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of unique ids in ratings: 21831\n",
+      "Number of unique ids in details: 21631\n",
+      "Number of unique ids in both datasets: 21831\n",
+      "Number of unique ids in ratings but not in details: 200\n"
+     ]
+    }
+   ],
+   "source": [
+    "id_count_ratings = ratings.id.nunique()\n",
+    "id_count_details = details.id.nunique()\n",
+    "id_count_all = set(ratings.id).union(set(details.id))\n",
+    "id_count_all = len(id_count_all)\n",
+    "\n",
+    "print(f'Number of unique ids in ratings: {id_count_ratings}')\n",
+    "print(f'Number of unique ids in details: {id_count_details}')\n",
+    "print(f'Number of unique ids in both datasets: {id_count_all}')\n",
+    "print(f'Number of unique ids in ratings but not in details: {id_count_all - id_count_details}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- The columns shown above contain null values.\n",
+    "- Some columns have 200 null values that are corresponding to the fact that there are 200 board games ids not appearing in details DataFrame. We may merge another dataset using inner join to address this issue, but we may as well keep those 200 rows for predictions.\n",
+    "- Most of other null values occur in the columns with character / list values. We decided to handle them case by case if they are needed in further analysis."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inner_data = pd.merge(ratings, details, on='id', how='inner')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "thumbnail                      6\n",
+       "description                    1\n",
+       "boardgamecategory            283\n",
+       "boardgamemechanic           1590\n",
+       "boardgamefamily             3761\n",
+       "boardgameexpansion         16125\n",
+       "boardgameimplementation    16769\n",
+       "boardgamedesigner            596\n",
+       "boardgameartist             5907\n",
+       "boardgamepublisher             1\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inner_data.isnull().sum()[inner_data.isnull().any()]"
    ]
   },
   {
