--- a/project_1.ipynb
+++ b/project_1.ipynb
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
        "4  https://cf.geekdo-images.com/j6iQpZ4XkemZP07HN...  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +481,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +502,7 @@
        "(21831, 10)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -555,7 +555,7 @@
        "(21631, 23)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -611,6 +611,79 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "num              0\n",
+       "id               0\n",
+       "name             0\n",
+       "year             0\n",
+       "rank             0\n",
+       "average          0\n",
+       "bayes_average    0\n",
+       "users_rated      0\n",
+       "url              0\n",
+       "thumbnail        6\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ratings.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "num                            0\n",
+       "id                             0\n",
+       "primary                        0\n",
+       "description                    1\n",
+       "yearpublished                  0\n",
+       "minplayers                     0\n",
+       "maxplayers                     0\n",
+       "playingtime                    0\n",
+       "minplaytime                    0\n",
+       "maxplaytime                    0\n",
+       "minage                         0\n",
+       "boardgamecategory            283\n",
+       "boardgamemechanic           1590\n",
+       "boardgamefamily             3761\n",
+       "boardgameexpansion         16125\n",
+       "boardgameimplementation    16769\n",
+       "boardgamedesigner            596\n",
+       "boardgameartist             5907\n",
+       "boardgamepublisher             1\n",
+       "owned                          0\n",
+       "trading                        0\n",
+       "wanting                        0\n",
+       "wishing                        0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "details.isna().sum()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -634,7 +707,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
