--- a/project_1.ipynb
+++ b/project_1.ipynb
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +469,7 @@
        "4  https://cf.geekdo-images.com/j6iQpZ4XkemZP07HN...  "
       ]
      },
-     "execution_count": 138,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -713,7 +713,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -738,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -754,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -810,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -842,7 +842,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -853,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -897,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -906,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -925,7 +925,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -943,7 +943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -973,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -984,7 +984,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1004,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1013,7 +1013,7 @@
        "Series([], dtype: int64)"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1037,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1068,7 +1068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1101,7 +1101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1120,7 +1120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1419,7 +1419,7 @@
        "[8 rows x 27 columns]"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1448,7 +1448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1457,7 +1457,7 @@
        "Text(0, 0.5, 'Number of games')"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1484,7 +1484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1504,7 +1504,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1524,7 +1524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1560,7 +1560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1599,7 +1599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1629,7 +1629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1646,7 +1646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1670,7 +1670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1708,7 +1708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1738,7 +1738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1765,7 +1765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1808,7 +1808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1849,6 +1849,16 @@
     "- [2] https://www.kaggle.com/datasets/joebeachcapital/board-games/data\n",
     "- [3] https://en.wikipedia.org/wiki/BoardGameGeek\n",
     "- [4] https://en.wikipedia.org/wiki/Bayesian_average"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save ready_data as a new csv file\n",
+    "ready_data.to_csv('board_games.csv', index=False)"
    ]
   }
  ],
