add table of contents demo

--- a/project_2.ipynb
+++ b/project_2.ipynb
@@ -25,6 +25,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Table of Contents\n",
+    "* [Chapter 1](#chapter1)\n",
+    "    * [Section 1.1](#section_1_1)\n",
+    "* [Chapter 2](#chapter2)\n",
+    "    * [Section 2.1](#section_2_1)\n",
+    "        * [Sub Section 2.1.1](#sub_section_2_1_1)\n",
+    "        * [Sub Section 2.1.2](#sub_section_2_1_2)\n",
+    "* [Chapter 3](#chapter3)\n",
+    "    * [Section 3.1](#section_3_1)\n",
+    "        * [Sub Section 3.1.1](#sub_section_3_1_1)\n",
+    "        * [Sub Section 3.1.2](#sub_section_3_1_2)\n",
+    "    * [Section 3.2](#section_3_2)\n",
+    "        * [Sub Section 3.2.1](#sub_section_3_2_1)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
