add table of contents demo-2

--- a/project_2.ipynb
+++ b/project_2.ipynb
@@ -29,7 +29,7 @@
    "metadata": {},
    "source": [
     "# Table of Contents\n",
-    "* [Chapter 1](#chapter1)\n",
+    "* [Chapter 1](#Descriptive_Statistics)\n",
     "    * [Section 1.1](#section_1_1)\n",
     "* [Chapter 2](#chapter2)\n",
     "    * [Section 2.1](#section_2_1)\n",
@@ -300,7 +300,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Descriptive Statistics"
+    "## Descriptive Statistics <a id=\"Descriptive_Statistics\"></a>"
    ]
   },
   {
@@ -329,6 +329,13 @@
    "metadata": {},
    "source": [
     "## Multivariate Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Reference"
    ]
   }
  ],
