--- a/project_2.ipynb
+++ b/project_2.ipynb
@@ -29,7 +29,7 @@
    "metadata": {},
    "source": [
     "# Table of Contents\n",
-    "* [Chapter 1](#Descriptive_Statistics)\n",
+    "* [Descriptive Statistics](#Descriptive_Statistics)\n",
     "    * [Section 1.1](#section_1_1)\n",
     "* [Chapter 2](#chapter2)\n",
     "    * [Section 2.1](#section_2_1)\n",
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
        "[5 rows x 40 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +307,378 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "选几个和问题相关的features，打出describe；可以把features分类列出"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "对于categorical，统计mode，countplot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['num_x', 'id', 'name', 'year', 'rank', 'average', 'bayes_average',\n",
+       "       'users_rated', 'url', 'thumbnail', 'num_y', 'primary', 'description',\n",
+       "       'yearpublished', 'minplayers', 'maxplayers', 'playingtime',\n",
+       "       'minplaytime', 'maxplaytime', 'minage', 'owned', 'trading', 'wanting',\n",
+       "       'wishing', 'category_list', 'mechanic_list', 'family_list',\n",
+       "       'expansion_list', 'implementation_list', 'artist_list', 'designer_list',\n",
+       "       'publisher_list', 'category_count', 'family_count', 'mechanic_count',\n",
+       "       'expansion_count', 'implementation_count', 'designer_count',\n",
+       "       'publisher_count', 'artist_count'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ready_data.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>num_x</th>\n",
+       "      <th>id</th>\n",
+       "      <th>year</th>\n",
+       "      <th>rank</th>\n",
+       "      <th>average</th>\n",
+       "      <th>bayes_average</th>\n",
+       "      <th>users_rated</th>\n",
+       "      <th>num_y</th>\n",
+       "      <th>yearpublished</th>\n",
+       "      <th>minplayers</th>\n",
+       "      <th>...</th>\n",
+       "      <th>wanting</th>\n",
+       "      <th>wishing</th>\n",
+       "      <th>category_count</th>\n",
+       "      <th>family_count</th>\n",
+       "      <th>mechanic_count</th>\n",
+       "      <th>expansion_count</th>\n",
+       "      <th>implementation_count</th>\n",
+       "      <th>designer_count</th>\n",
+       "      <th>publisher_count</th>\n",
+       "      <th>artist_count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>21631.000000</td>\n",
+       "      <td>21631.000000</td>\n",
+       "      <td>21631.000000</td>\n",
+       "      <td>21631.000000</td>\n",
+       "      <td>21631.000000</td>\n",
+       "      <td>21631.000000</td>\n",
+       "      <td>21631.000000</td>\n",
+       "      <td>21631.000000</td>\n",
+       "      <td>21631.000000</td>\n",
+       "      <td>21631.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>21631.000000</td>\n",
+       "      <td>21631.000000</td>\n",
+       "      <td>21631.000000</td>\n",
+       "      <td>21631.000000</td>\n",
+       "      <td>21631.000000</td>\n",
+       "      <td>21631.000000</td>\n",
+       "      <td>21631.000000</td>\n",
+       "      <td>21631.000000</td>\n",
+       "      <td>21631.000000</td>\n",
+       "      <td>21631.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>10878.522352</td>\n",
+       "      <td>118133.093847</td>\n",
+       "      <td>1988.101290</td>\n",
+       "      <td>10879.522352</td>\n",
+       "      <td>6.417249</td>\n",
+       "      <td>5.683664</td>\n",
+       "      <td>874.548518</td>\n",
+       "      <td>10815.000000</td>\n",
+       "      <td>1986.094910</td>\n",
+       "      <td>2.007027</td>\n",
+       "      <td>...</td>\n",
+       "      <td>42.030373</td>\n",
+       "      <td>233.655587</td>\n",
+       "      <td>2.618094</td>\n",
+       "      <td>2.220239</td>\n",
+       "      <td>2.907910</td>\n",
+       "      <td>1.381674</td>\n",
+       "      <td>0.312931</td>\n",
+       "      <td>1.367482</td>\n",
+       "      <td>2.701678</td>\n",
+       "      <td>1.724608</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>6311.917913</td>\n",
+       "      <td>105310.419253</td>\n",
+       "      <td>190.115056</td>\n",
+       "      <td>6311.917913</td>\n",
+       "      <td>0.929345</td>\n",
+       "      <td>0.366096</td>\n",
+       "      <td>3695.946026</td>\n",
+       "      <td>6244.476172</td>\n",
+       "      <td>210.042496</td>\n",
+       "      <td>0.688957</td>\n",
+       "      <td>...</td>\n",
+       "      <td>117.940355</td>\n",
+       "      <td>800.657809</td>\n",
+       "      <td>1.380869</td>\n",
+       "      <td>2.345225</td>\n",
+       "      <td>2.189651</td>\n",
+       "      <td>7.754529</td>\n",
+       "      <td>0.859280</td>\n",
+       "      <td>0.768842</td>\n",
+       "      <td>5.448527</td>\n",
+       "      <td>4.613607</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.040000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>30.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-3500.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>5407.500000</td>\n",
+       "      <td>12280.500000</td>\n",
+       "      <td>2001.000000</td>\n",
+       "      <td>5408.500000</td>\n",
+       "      <td>5.830000</td>\n",
+       "      <td>5.510000</td>\n",
+       "      <td>57.000000</td>\n",
+       "      <td>5407.500000</td>\n",
+       "      <td>2001.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>14.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>10838.000000</td>\n",
+       "      <td>105187.000000</td>\n",
+       "      <td>2011.000000</td>\n",
+       "      <td>10839.000000</td>\n",
+       "      <td>6.450000</td>\n",
+       "      <td>5.546000</td>\n",
+       "      <td>124.000000</td>\n",
+       "      <td>10815.000000</td>\n",
+       "      <td>2011.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>9.000000</td>\n",
+       "      <td>39.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>16355.500000</td>\n",
+       "      <td>207013.000000</td>\n",
+       "      <td>2017.000000</td>\n",
+       "      <td>16356.500000</td>\n",
+       "      <td>7.040000</td>\n",
+       "      <td>5.678000</td>\n",
+       "      <td>397.000000</td>\n",
+       "      <td>16222.500000</td>\n",
+       "      <td>2017.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>29.000000</td>\n",
+       "      <td>131.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>21830.000000</td>\n",
+       "      <td>350992.000000</td>\n",
+       "      <td>3500.000000</td>\n",
+       "      <td>21831.000000</td>\n",
+       "      <td>9.570000</td>\n",
+       "      <td>8.511000</td>\n",
+       "      <td>108975.000000</td>\n",
+       "      <td>21630.000000</td>\n",
+       "      <td>2023.000000</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2011.000000</td>\n",
+       "      <td>19325.000000</td>\n",
+       "      <td>14.000000</td>\n",
+       "      <td>106.000000</td>\n",
+       "      <td>20.000000</td>\n",
+       "      <td>525.000000</td>\n",
+       "      <td>38.000000</td>\n",
+       "      <td>21.000000</td>\n",
+       "      <td>207.000000</td>\n",
+       "      <td>509.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>8 rows × 27 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              num_x             id          year          rank       average  \\\n",
+       "count  21631.000000   21631.000000  21631.000000  21631.000000  21631.000000   \n",
+       "mean   10878.522352  118133.093847   1988.101290  10879.522352      6.417249   \n",
+       "std     6311.917913  105310.419253    190.115056   6311.917913      0.929345   \n",
+       "min        0.000000       1.000000      0.000000      1.000000      1.040000   \n",
+       "25%     5407.500000   12280.500000   2001.000000   5408.500000      5.830000   \n",
+       "50%    10838.000000  105187.000000   2011.000000  10839.000000      6.450000   \n",
+       "75%    16355.500000  207013.000000   2017.000000  16356.500000      7.040000   \n",
+       "max    21830.000000  350992.000000   3500.000000  21831.000000      9.570000   \n",
+       "\n",
+       "       bayes_average    users_rated         num_y  yearpublished  \\\n",
+       "count   21631.000000   21631.000000  21631.000000   21631.000000   \n",
+       "mean        5.683664     874.548518  10815.000000    1986.094910   \n",
+       "std         0.366096    3695.946026   6244.476172     210.042496   \n",
+       "min         0.000000      30.000000      0.000000   -3500.000000   \n",
+       "25%         5.510000      57.000000   5407.500000    2001.000000   \n",
+       "50%         5.546000     124.000000  10815.000000    2011.000000   \n",
+       "75%         5.678000     397.000000  16222.500000    2017.000000   \n",
+       "max         8.511000  108975.000000  21630.000000    2023.000000   \n",
+       "\n",
+       "         minplayers  ...       wanting       wishing  category_count  \\\n",
+       "count  21631.000000  ...  21631.000000  21631.000000    21631.000000   \n",
+       "mean       2.007027  ...     42.030373    233.655587        2.618094   \n",
+       "std        0.688957  ...    117.940355    800.657809        1.380869   \n",
+       "min        0.000000  ...      0.000000      0.000000        0.000000   \n",
+       "25%        2.000000  ...      3.000000     14.000000        2.000000   \n",
+       "50%        2.000000  ...      9.000000     39.000000        2.000000   \n",
+       "75%        2.000000  ...     29.000000    131.000000        3.000000   \n",
+       "max       10.000000  ...   2011.000000  19325.000000       14.000000   \n",
+       "\n",
+       "       family_count  mechanic_count  expansion_count  implementation_count  \\\n",
+       "count  21631.000000    21631.000000     21631.000000          21631.000000   \n",
+       "mean       2.220239        2.907910         1.381674              0.312931   \n",
+       "std        2.345225        2.189651         7.754529              0.859280   \n",
+       "min        0.000000        0.000000         0.000000              0.000000   \n",
+       "25%        1.000000        1.000000         0.000000              0.000000   \n",
+       "50%        2.000000        2.000000         0.000000              0.000000   \n",
+       "75%        3.000000        4.000000         1.000000              0.000000   \n",
+       "max      106.000000       20.000000       525.000000             38.000000   \n",
+       "\n",
+       "       designer_count  publisher_count  artist_count  \n",
+       "count    21631.000000     21631.000000  21631.000000  \n",
+       "mean         1.367482         2.701678      1.724608  \n",
+       "std          0.768842         5.448527      4.613607  \n",
+       "min          1.000000         1.000000      1.000000  \n",
+       "25%          1.000000         1.000000      1.000000  \n",
+       "50%          1.000000         1.000000      1.000000  \n",
+       "75%          2.000000         3.000000      2.000000  \n",
+       "max         21.000000       207.000000    509.000000  \n",
+       "\n",
+       "[8 rows x 27 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ready_data.describe() # check the summary statistics of the data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Inferential Statistics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "对于不同年份，category，公司，family，ANOVA test一下平均分的不同；\n",
+    "\n",
+    "可以只选几个最多的类别\n",
+    "\n",
+    "对于不互斥的类别，是否test会有问题"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "把numerical features里面corr最高的几组3列出来"
    ]
   },
   {
@@ -321,6 +692,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "把第一次改一改\n",
+    "\n",
+    "画一个5x5的pariplot\n",
+    "\n",
+    "自由发挥。。。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Comparative Analysis"
    ]
   },
@@ -328,7 +710,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "histogram / scatterplot, hue=\"???\"\n",
+    "\n",
+    "??? 可以是 age， year，player_num"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Multivariate Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "画pivot table，cross tabulation\n",
+    "\n",
+    "也是按照age,year,player_num\n",
+    "\n",
+    "或者 card game, non-card game"
    ]
   },
   {
