old new year diff t test

--- a/project_2.ipynb
+++ b/project_2.ipynb
@@ -675,6 +675,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TtestResult(statistic=-55.1884190689741, pvalue=0.0, df=21103.390417804843)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from scipy.stats import ttest_ind\n",
+    "\n",
+    "median_year = ready_data['year'].median()\n",
+    "old_year_ratings = ready_data[ready_data['year'] < median_year]['average']\n",
+    "new_year_ratings = ready_data[ready_data['year'] >= median_year]['average']\n",
+    "\n",
+    "ttest_ind(old_year_ratings, new_year_ratings, equal_var=False)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
